--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ android {
 
 dependencies {
 
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
@@ -66,9 +68,15 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
-    implementation 'android.arch.persistence.room:common:1.1.1'
-    implementation 'androidx.room:room-ktx:2.6.1'
-    kapt 'android.arch.persistence.room:compiler:1.1.1'
+    implementation "androidx.compose.runtime:runtime-livedata:1.5.4"
+
+    // Room
+    def room_version = "2.5.0"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+    //Hilt
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-alpha02'
 
     implementation 'androidx.compose.material3:material3:1.1.2'
 
